--- a/src/styles.css
+++ b/src/styles.css
@@ -1,34 +1,94 @@
 :root {
-  --dark-square-green: #4c946a;
-  --light-square-green: #e0ddcc;
+  --dark-square-color: #4c946a;
+  --light-square-color: #e0ddcc;
+  --hover-light-square-color: #e3d798;
+  --hover-dark-square-color: #3f7b58;
+  --focus-outline-color: rgba(249, 147, 56, 0.85);
 }
 
 .chessboard {
-  aspect-ratio: 1 / 1;
+  position: relative;
+  display: table;
+  width: 100%;
 }
 
-.board rect.dark {
-  fill: var(--dark-square-green);
+/* Row containing squares. */
+.chessboard > div {
+  display: table-row;
 }
 
-.board rect.light {
-  fill: var(--light-square-green);
+/* A single square. */
+[data-square-color] {
+  display: table-cell;
+  position: relative;
+  width: 12.5%;
+  /* Aspect ratio trick for 1:1 square */
+  padding-top: 12.5%;
 }
 
-.labels text {
+[data-square-color="dark"] {
+  background-color: var(--dark-square-color);
+  /* Label colors for inline labels should be inverse of square color */
+  color: var(--light-square-color);
+}
+
+[data-square-color="light"] {
+  background-color: var(--light-square-color);
+  color: var(--dark-square-color);
+}
+
+[data-square-color]:focus {
+  outline: none;
+  box-shadow: inset 0 0 6px 6px var(--focus-outline-color);
+}
+
+[role="gridcell"][data-square-color="dark"]:hover {
+  background-color: var(--hover-dark-square-color);
+}
+
+[role="gridcell"][data-square-color="light"]:hover {
+  background-color: var(--hover-light-square-color);
+}
+
+[data-rank-label]::before {
+  content: attr(data-rank-label);
+  position: absolute;
+  top: 5%;
+  left: 5%;
+}
+
+[data-file-label]::after {
+  content: attr(data-file-label);
+  position: absolute;
+  bottom: 5%;
+  right: 5%;
+}
+
+[data-square] {
   font-family: sans-serif;
-  font-size: 0.75rem;
+  font-size: 0.8rem;
+}
+
+.pieces {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
   pointer-events: none;
 }
 
-.labels text.light {
-  fill: var(--dark-square-green);
+[data-move-state="awaiting-input"] .has-piece {
+  cursor: pointer;
 }
 
-.labels text.dark {
-  fill: var(--light-square-green);
+[data-move-state="touching-first-square"] [data-square],
+[data-move-state="dragging"] [data-square] {
+  cursor: grab;
 }
 
-.pieces use {
-  pointer-events: none;
+[data-move-state="awaiting-second-touch"] [data-square] {
+  cursor: pointer;
 }
