Add separate state for "canceling second touch".
Instead of canceling on second mousedown event, mark as "canceling", to
allow for recovery with a subsequent drag action. Only cancel the move
on the second mouseup.

--- a/src/styles.css
+++ b/src/styles.css
@@ -91,6 +91,7 @@
   cursor: grab;
 }
 
-[data-move-state="awaiting-second-touch"] [data-square] {
+[data-move-state="awaiting-second-touch"] [data-square],
+[data-move-state="canceling-second-touch"] [data-square] {
   cursor: pointer;
 }
