--- a/src/styles.css
+++ b/src/styles.css
@@ -80,7 +80,7 @@
   white-space: nowrap;
 }
 
-.pieces {
+.chessboard--pieces {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -89,6 +89,14 @@
   bottom: 0;
   right: 0;
   pointer-events: none;
+}
+
+.chessboard--pieces > svg {
+  position: absolute;
+  width: 12.5%;
+  height: 12.5%;
+  top: 0;
+  left: 0;
 }
 
 [data-move-state="awaiting-input"] .has-piece {
