--- a/src/style.css
+++ b/src/style.css
@@ -19,12 +19,19 @@
   user-select: none;
 }
 
-.chessboard--squares td {
+[data-square] {
   /* Width of table cell is implicitly 12.5% because row will have
      exactly 8 columns and `table-layout` is fixed. Padding of 12.5% * width
      ensures square aspect ratio. */
   padding: 12.5% 0 0 0;
   position: relative;
+  font-family: sans-serif;
+  font-size: 0.7rem;
+}
+
+[data-square]:focus {
+  outline: none;
+  box-shadow: inset 0 0 4px 4px var(--focus-outline-color);
 }
 
 [data-square-color="dark"] {
@@ -38,21 +45,11 @@
   color: var(--dark-square-color);
 }
 
-[data-square] {
-  font-family: sans-serif;
-  font-size: 0.7rem;
-}
-
-[role="gridcell"][data-square-color]:focus {
-  outline: none;
-  box-shadow: inset 0 0 4px 4px var(--focus-outline-color);
-}
-
-[role="gridcell"][data-square-color="dark"]:hover {
+[data-square-color="dark"]:hover {
   background-color: var(--hover-dark-square-color);
 }
 
-[role="gridcell"][data-square-color="light"]:hover {
+[data-square-color="light"]:hover {
   background-color: var(--hover-light-square-color);
 }
 
@@ -80,7 +77,7 @@
   white-space: nowrap;
 }
 
-[data-square] > svg {
+[data-square] svg {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -104,4 +101,9 @@
 [data-move-state="awaiting-second-touch"] [data-square],
 [data-move-state="moving-piece-kb"] [data-square] {
   cursor: pointer;
+}
+
+[data-move-state="moving-piece-kb"] .move-start svg,
+[data-move-state="dragging"] .move-start svg {
+  opacity: 0.5;
 }
