--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,30 @@
   user-select: none;
 }
 
+.chessboard--rank-label {
+  position: absolute;
+  top: 3%;
+  left: 4%;
+}
+
+.chessboard--file-label {
+  position: absolute;
+  bottom: 3%;
+  right: 4%;
+}
+
+/* Hide label text from every device except screenreaders. */
+.chessboard--square-label {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
 [data-square] {
   /* Width of table cell is implicitly 12.5% because row will have
      exactly 8 columns and `table-layout` is fixed. Padding of 12.5% * width
@@ -34,49 +58,6 @@
   box-shadow: inset 0 0 4px 4px var(--focus-outline-color);
 }
 
-[data-square-color="dark"] {
-  background-color: var(--dark-square-color);
-  /* Label colors for inline labels should be inverse of square color */
-  color: var(--light-square-color);
-}
-
-[data-square-color="light"] {
-  background-color: var(--light-square-color);
-  color: var(--dark-square-color);
-}
-
-[data-square-color="dark"]:hover {
-  background-color: var(--hover-dark-square-color);
-}
-
-[data-square-color="light"]:hover {
-  background-color: var(--hover-light-square-color);
-}
-
-[data-square] .chessboard--rank-label {
-  position: absolute;
-  top: 3%;
-  left: 4%;
-}
-
-[data-square] .chessboard--file-label {
-  position: absolute;
-  bottom: 3%;
-  right: 4%;
-}
-
-/* Hide label text from every device except screenreaders. */
-[data-square] .chessboard--square-label {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip-path: inset(50%);
-  white-space: nowrap;
-}
-
 [data-square] svg {
   position: absolute;
   width: 100%;
@@ -88,7 +69,26 @@
   pointer-events: none;
 }
 
-[data-move-state="awaiting-input"] .has-piece {
+[data-square-color="dark"] {
+  background-color: var(--dark-square-color);
+  /* Label colors for inline labels should be inverse of square color */
+  color: var(--light-square-color);
+}
+
+[data-square-color="dark"]:hover {
+  background-color: var(--hover-dark-square-color);
+}
+
+[data-square-color="light"] {
+  background-color: var(--light-square-color);
+  color: var(--dark-square-color);
+}
+
+[data-square-color="light"]:hover {
+  background-color: var(--hover-light-square-color);
+}
+
+[data-move-state="awaiting-input"] [data-square].has-piece {
   cursor: pointer;
 }
 
@@ -103,7 +103,7 @@
   cursor: pointer;
 }
 
-[data-move-state="moving-piece-kb"] .move-start svg,
-[data-move-state="dragging"] .move-start svg {
+[data-move-state="moving-piece-kb"] [data-square].move-start svg,
+[data-move-state="dragging"] [data-square].move-start svg {
   opacity: 0.5;
 }
