--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,11 @@
 :root {
   --dark-square-color: #4c946a;
   --light-square-color: #e0ddcc;
+  --focus-outline-color: rgba(249 147 56 90%);
   --hover-light-square-color: #e3d798;
   --hover-dark-square-color: #3f7b58;
-  --focus-outline-color: rgba(249, 147, 56, 0.85);
+  --move-start-light-square-color: #fadd4c;
+  --move-start-dark-square-color: #10b756;
 }
 
 .chessboard {
@@ -15,6 +17,7 @@
   width: 100%;
   table-layout: fixed;
   border-collapse: collapse;
+
   /* Prevent native dragging caused if any of the children are "selected". */
   user-select: none;
 }
@@ -71,6 +74,7 @@
 
 [data-square-color="dark"] {
   background-color: var(--dark-square-color);
+
   /* Label colors for inline labels should be inverse of square color */
   color: var(--light-square-color);
 }
@@ -103,7 +107,22 @@
   cursor: pointer;
 }
 
-[data-move-state="moving-piece-kb"] [data-square].move-start svg,
+[data-move-state="moving-piece-kb"] [data-square].move-start {
+  box-shadow: inset 0 0 0 2px black;
+}
+
+[data-square-color="light"].move-start,
+[data-square-color="light"].move-start:focus,
+[data-square-color="light"].move-start:hover {
+  background-color: var(--move-start-light-square-color);
+}
+
+[data-square-color="dark"].move-start,
+[data-square-color="dark"].move-start:focus,
+[data-square-color="dark"].move-start:hover {
+  background-color: var(--move-start-dark-square-color);
+}
+
 [data-move-state="dragging"] [data-square].move-start svg {
   opacity: 0.5;
 }
