--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,12 @@
 :root {
   --dark-square-color: #4c946a;
   --light-square-color: #e0ddcc;
-  --focus-outline-color: rgba(249 147 56 90%);
+  --focus-outline-color: rgba(249 147 56 / 90%);
   --hover-light-square-color: #e3d798;
   --hover-dark-square-color: #3f7b58;
   --move-start-light-square-color: #fadd4c;
   --move-start-dark-square-color: #10b756;
+  --kb-move-outline-color: black;
 }
 
 .chessboard {
@@ -107,18 +108,16 @@
   cursor: pointer;
 }
 
-[data-move-state="moving-piece-kb"] [data-square].move-start {
-  box-shadow: inset 0 0 0 2px black;
+[data-move-state="moving-piece-kb"] [data-square].move-start:not(:focus) {
+  box-shadow: inset 0 0 0 2px var(--kb-move-outline-color);
 }
 
 [data-square-color="light"].move-start,
-[data-square-color="light"].move-start:focus,
 [data-square-color="light"].move-start:hover {
   background-color: var(--move-start-light-square-color);
 }
 
 [data-square-color="dark"].move-start,
-[data-square-color="dark"].move-start:focus,
 [data-square-color="dark"].move-start:hover {
   background-color: var(--move-start-dark-square-color);
 }
