Tweak outline color for keyboard move

--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@
   --hover-dark-square-color: #3f7b58;
   --move-start-light-square-color: #fadd4c;
   --move-start-dark-square-color: #10b756;
-  --kb-move-outline-color: black;
+  --kb-move-outline-color: #103c23;
 }
 
 .chessboard {
