--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-:root {
+:host {
   --dark-square-color: #4c946a;
   --light-square-color: #e0ddcc;
   --focus-outline-color: rgba(249 147 56 / 90%);
