--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-:root {
+:host {
   --dark-square-color: #4c946a;
   --light-square-color: #e0ddcc;
   --focus-outline-color: rgba(249 147 56 / 90%);
@@ -91,7 +91,7 @@
   color: var(--light-square-color);
 }
 
-[data-square-color="dark"]:hover {
+[data-move-state] [data-square-color="dark"]:hover {
   background-color: var(--hover-dark-square-color);
 }
 
@@ -100,7 +100,7 @@
   color: var(--dark-square-color);
 }
 
-[data-square-color="light"]:hover {
+[data-move-state] [data-square-color="light"]:hover {
   background-color: var(--hover-light-square-color);
 }
 
