Support animation of pieces when moving (#11)
* Allow specifying explicit position with both coordinates and squares offset

* Separate out methods for starting, finishing, and canceling moves

* Add animation for dragged piece snapping back to board

* Rearrange how handlers are called

* Add destroy() method to cancel all animations

* Fix animation for moves

--- a/src/style.css
+++ b/src/style.css
@@ -82,6 +82,17 @@
   pointer-events: none;
 }
 
+[data-move-state="animating"] .chessboard--piece {
+  /* TODO: reduce transition duration */
+  transition-duration: 300ms;
+}
+
+@media (prefers-reduced-motion) {
+  [data-move-state="animating"] .chessboard--piece {
+    transition-duration: 1ms;
+  }
+}
+
 [data-square] .chessboard--piece:not(.is-secondary) {
   z-index: 10;
 }
