--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,27 @@
 :host {
+  /* Square colors */
   --dark-square-color: #4c946a;
   --light-square-color: #e0ddcc;
-  --focus-outline-color: hsla(28deg 94% 60% / 90%);
-  --hover-light-square-color: #e3d798;
+
+  /* Square colors when in :hover state */
   --hover-dark-square-color: #3f7b58;
+  --hover-light-square-color: #e3d798;
+
+  /* Square colors when the square is marked as start of move */
   --move-start-light-square-color: #fadd4c;
   --move-start-dark-square-color: #10b756;
+
+  /* Square highlight colors when the square is an eligible move target */
+  --move-eligible-light-square-highlight-color: #000;
+  --move-eligible-dark-square-highlight-color: #000;
+
+  /* Color of outline when square has focus */
+  --focus-outline-color: hsla(28deg 94% 60% / 90%);
+
+  /* Color of outline when square is involved in a keyboard move */
   --kb-move-outline-color: hsla(146deg 58% 15% / 95%);
+
+  /* Duration for all transitions */
   --piece-transition-duration: 200ms;
 
   display: inline-block;
@@ -66,6 +81,8 @@
   position: relative;
   font-family: sans-serif;
   font-size: 0.7rem;
+  background-color: var(--p-square-color);
+  color: var(--p-label-color);
 }
 
 [data-square]:focus {
@@ -73,29 +90,28 @@
   box-shadow: inset 0 0 4px 4px var(--focus-outline-color);
 }
 
-[data-square-color="dark"] {
-  background-color: var(--dark-square-color);
-
-  /* Label colors for inline labels should be inverse of square color */
-  color: var(--light-square-color);
+[data-square].move-eligible {
+  background: radial-gradient(
+    var(--p-move-eligible-highlight-color) 24%,
+    /* Add pixel offset to boundary to reduce jaggedness. */
+      var(--p-square-color) calc(24% + 1px)
+  );
 }
 
-[data-move-state] [data-square-color="dark"]:hover {
-  /* Only change hover state if board is interactive. */
-  background-color: var(--hover-dark-square-color);
+[data-square].occupied.move-eligible {
+  /* Wide circle with transparent interior if square is occupied. */
+  background: radial-gradient(
+    var(--p-square-color) 82%,
+    var(--p-move-eligible-highlight-color) calc(82% + 1px)
+  );
 }
 
-[data-square-color="light"] {
-  background-color: var(--light-square-color);
-  color: var(--dark-square-color);
+[data-square].move-start {
+  --p-square-color: var(--p-move-start-square-color);
 }
 
-[data-move-state] [data-square-color="light"]:hover {
-  background-color: var(--hover-light-square-color);
-}
-
-[data-move-state="awaiting-input"] [data-square].has-piece,
-[data-move-state="animating"] [data-square].has-piece {
+[data-move-state="awaiting-input"] [data-square].occupied,
+[data-move-state="animating"] [data-square].occupied {
   cursor: pointer;
 }
 
@@ -114,15 +130,36 @@
   box-shadow: inset 0 0 3px 3px var(--kb-move-outline-color);
 }
 
-[data-square-color="light"].move-start,
-[data-square-color="light"].move-start:hover {
-  background-color: var(--move-start-light-square-color);
+[data-move-state] [data-square]:hover:not(.move-start) {
+  /* Only change hover if board is interactive, i.e. has [data-move-state]. */
+  --p-square-color: var(--p-hover-square-color);
 }
 
-[data-square-color="dark"].move-start,
-[data-square-color="dark"].move-start:hover {
-  background-color: var(--move-start-dark-square-color);
+/* Square color overrides */
+
+[data-square-color="dark"] {
+  --p-square-color: var(--dark-square-color);
+
+  /* Label colors for inline labels should be inverse of square color */
+  --p-label-color: var(--light-square-color);
+  --p-hover-square-color: var(--hover-dark-square-color);
+  --p-move-eligible-highlight-color: var(
+    --move-eligible-dark-square-highlight-color
+  );
+  --p-move-start-square-color: var(--move-start-dark-square-color);
 }
+
+[data-square-color="light"] {
+  --p-square-color: var(--light-square-color);
+  --p-label-color: var(--dark-square-color);
+  --p-hover-square-color: var(--hover-light-square-color);
+  --p-move-eligible-highlight-color: var(
+    --move-eligible-light-square-highlight-color
+  );
+  --p-move-start-square-color: var(--move-start-light-square-color);
+}
+
+/* Piece styles */
 
 [data-square] .piece {
   position: absolute;
