Add <slot> to each square
To allow custom SVGs to be rendered onto squares, add a named `<slot>` to each
square, with name corresponding to the label of the square.

According to the HTML spec for slot name, changing the name of a slot
causes re-assignment of slots (https://dom.spec.whatwg.org/#slot-name),
so this should automatically adjust when flipping the orientation of the
board.

--- a/src/style.css
+++ b/src/style.css
@@ -135,7 +135,9 @@
   --p-square-color: var(--p-hover-square-color);
 }
 
-/* Square color overrides */
+/**************************
+ * Square color overrides *
+ **************************/
 
 [data-square-color="dark"] {
   --p-square-color: var(--dark-square-color);
@@ -159,9 +161,14 @@
   --p-move-start-square-color: var(--move-start-light-square-color);
 }
 
-/* Piece styles */
+/****************
+ * Piece styles *
+ ****************/
 
-[data-square] .piece {
+/* Always use absolute positioning for pieces and slotted
+   content (custom SVGs, custom content etc) */
+[data-square] .piece,
+::slotted(*) {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -170,6 +177,9 @@
   bottom: 0;
   right: 0;
   pointer-events: none;
+}
+
+[data-square] .piece {
   z-index: 10;
 }
 
