--- a/src/style.css
+++ b/src/style.css
@@ -202,7 +202,7 @@
 /* Always use absolute positioning for pieces and slotted
    content (custom SVGs, custom content etc) */
 [data-square] .piece,
-::slotted(*) {
+[data-square] .content {
   position: absolute;
   width: 100%;
   height: 100%;
