--- a/src/style.css
+++ b/src/style.css
@@ -146,19 +146,18 @@
     var(--p-move-start-outline-color);
 }
 
-[data-move-state="awaiting-input"] [data-square].has-piece,
-[data-move-state="animating"] [data-square].has-piece {
+:is([data-move-state="awaiting-input"], [data-move-state="animating"])
+  [data-square].has-piece {
   cursor: pointer;
 }
 
-[data-move-state="touching-first-square"] [data-square],
-[data-move-state="dragging"] [data-square],
-[data-move-state="canceling-second-touch"] [data-square] {
+:is([data-move-state="touching-first-square"], [data-move-state="dragging"], [data-move-state="canceling-second-touch"])
+  [data-square] {
   cursor: grab;
 }
 
-[data-move-state="awaiting-second-touch"] [data-square],
-[data-move-state="moving-piece-kb"] [data-square] {
+:is([data-move-state="awaiting-second-touch"], [data-move-state="moving-piece-kb"])
+  [data-square] {
   cursor: pointer;
 }
 
