Remove 'animating' state entirely.
Instead of transitioning via "animating" state, we will simply let
animations run to completion and instead disable animation by
configuring `transition-property` on individual pieces.

--- a/src/style.css
+++ b/src/style.css
@@ -146,8 +146,7 @@
     var(--p-move-start-outline-color);
 }
 
-:is([data-move-state="awaiting-input"], [data-move-state="animating"])
-  [data-square].has-piece {
+[data-move-state="awaiting-input"] [data-square].has-piece {
   cursor: pointer;
 }
 
@@ -214,15 +213,15 @@
 
 [data-square] .piece {
   z-index: 10;
+  transition-duration: var(--piece-transition-duration);
+
+  /* By default, disable all transitions and override for specific transitions. */
+  transition-property: none;
 }
 
 [data-square] .piece.secondary {
   z-index: 5;
   opacity: var(--ghost-piece-opacity);
-}
-
-[data-move-state="animating"] .piece {
-  transition-duration: max(var(--piece-transition-duration), 1ms);
 }
 
 [data-square].move-start .piece:not(.secondary) {
