--- a/src/style.css
+++ b/src/style.css
@@ -26,8 +26,8 @@
   --outline-blur-radius: 3px;
   --outline-spread-radius: 4px;
 
-  /* Duration for all transitions */
-  --piece-transition-duration: 200ms;
+  /* Duration for animation of piece (on moves and snapbacks). */
+  --piece-animation-duration: 200ms;
 
   /* Label font properties */
   --label-font-size: 0.7rem;
@@ -138,6 +138,7 @@
 
 :is([data-board-state="dragging"], [data-board-state="moving-piece-kb"])
   [data-square].move-start:not(:focus) {
+  /* Additional outline for active-move-square when dragging or KB-navigating. */
   box-shadow: inset 0 0 var(--outline-blur-radius) var(--outline-spread-radius)
     var(--p-move-start-outline-color);
 }
@@ -209,10 +210,20 @@
 
 [data-square] .piece {
   z-index: 10;
-  transition-duration: var(--piece-transition-duration);
+  animation-duration: var(--piece-animation-duration);
+}
 
-  /* By default, disable all transitions and override for specific transitions. */
-  transition-property: none;
+/* Animation sequence for piece movements (translations). */
+@keyframes move-piece {
+  0% {
+    left: var(--p-piece-startX, 0);
+    top: var(--p-piece-startY, 0);
+  }
+
+  100% {
+    left: 0;
+    top: 0;
+  }
 }
 
 [data-square] .piece.secondary {
